Input bar is now fixed into position. Messages do not overlap it.

--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -26,6 +26,7 @@
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
     background-color: #2effab;
+    max-height: calc(100vh - 60px);
 }
 
 .chatEmptyState {
